@@ -32,7 +32,6 @@ setup(name='plone.app.contentmenu',
         'setuptools',
         'plone.memoize',
         'plone.navigation',
-        'plone.app.content',
         'zope.component',
         'zope.contentprovider',
         'zope.i18n',
